--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,12 +69,34 @@ p {
     margin-left: 25px;
 }
 
+/*content start*/
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+.content .content-main {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+
+.content .content-main img {
+    max-height: 200px;
+}
+
+.content .content-main h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+/*content end*/
+
+/*benefits start*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -86,75 +108,22 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-content {
+.benefits .benefit-main {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-content h3 {
+.benefits .benefit-main h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-content img {
+.benefits .benefit-main img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+/*benefits end*/
 
 footer {
     padding: 30px;
